[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Enemy0.tscn" type="PackedScene" id=4]
[ext_resource path="res://Johnny.tscn" type="PackedScene" id=5]
[ext_resource path="res://blocks.tres" type="TileSet" id=6]
[ext_resource path="res://Bottom.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 30.5501 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.5285, 10.5039 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 10000, 9.99255 )
b = Vector2( 0, 10 )

[node name="Level0" type="Node2D" groups=[
"level",
]]

script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="." index="0"]

position = Vector2( 1086.49, 27.0163 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 0.5
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear" ]
__meta__ = {
"_edit_group_": true
}

[node name="DeathTimer" type="Timer" parent="RigidBody2D" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D" index="1"]

position = Vector2( -0.474098, 0 )
scale = Vector2( 3.0761, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RigidBody2D" index="2"]

texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="RigidBody2D" index="3"]

position = Vector2( -0.136593, -0.524228 )
scale = Vector2( 1.04933, 1.02975 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D" index="0"]

scale = Vector2( 3, 3 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Enemy0" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 900.407, 22.3262 )

[node name="Johnny" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( -101.994, 286.284 )
JUMPSPEED = 550.0

[node name="Tiles" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 12, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131095, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196632, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262167, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327708, 1, 0, 327709, 1, 0, 327711, 1, 0, 327712, 1, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393243, 1, 0, 393246, 1, 0, 393249, 1, 0, 458779, 1, 0, 458785, 1, 0, 524316, 1, 0, 524320, 1, 0, 589853, 1, 0, 589855, 1, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655390, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="Area2D" parent="." index="4"]

position = Vector2( -5000, 995.059 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom" index="0"]

shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="RigidBody2D/DeathTimer" to="RigidBody2D" method="_on_DeathTimer_timeout"]

[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Bottom" to="Bottom" method="body_entered"]


